el4s-realtime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: el4s-realtime-service
  namespace: kigawa-net-el4s-realtime
  labels:
    app: el4s-realtime
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: el4s-realtime
  type: ClusterIP
