el4s-realtime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: el4s-realtime-ingress
  namespace: kigawa-net-el4s-realtime
  annotations:
    haproxy.org/timeout-connect: "10s"
    haproxy.org/timeout-server: "120s"
    haproxy.org/timeout-tunnel: "3600s"
spec:
  ingressClassName: haproxy
  rules:
    - host: el4s-realtime.kigawa.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el4s-realtime-service
                port:
                  number: 80
